src/log.log
Included from /mnt/c/PROJETOS/BIONIX/BIONIX-ML-EXEMPLOS/src/principal.mojo:8:
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-EXEMPLOS/src/e000008_reconhecimento_facial/exemplo.mojo:2:10: error: expected module name
import ../../BIONIX-ML/src.computacao as computacao_pkg
         ^
Included from /mnt/c/PROJETOS/BIONIX/BIONIX-ML-EXEMPLOS/src/e000008_reconhecimento_facial/__init__.mojo:1:
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-EXEMPLOS/src/e000008_reconhecimento_facial/__init__.mojo:1:8: error: unable to locate module 'e000008_reconhecimento_facial'
import e000008_reconhecimento_facial.exemplo as exemplo
       ^
Included from /mnt/c/PROJETOS/BIONIX/BIONIX-ML-EXEMPLOS/src/e000008_reconhecimento_facial/__init__.mojo:1:
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-EXEMPLOS/src/e000008_reconhecimento_facial/__init__.mojo:1:38: error: 
import e000008_reconhecimento_facial.exemplo as exemplo
                                     ^
/mnt/c/PROJETOS/BIONIX/BIONIX-ML-EXEMPLOS/src/.pixi/envs/default/bin/mojo: error: failed to parse the provided Mojo source module
